--- a/docs/wallets/wallet-seed-phrase.mdx
+++ b/docs/wallets/wallet-seed-phrase.mdx
@@ -11,17 +11,17 @@ slug: /wallets/wallet-seed-phrase
 # Helium Wallet Seed Phrase
 
 When creating a Helium Wallet, users are prompted to write down the 24-word seed phrase. These are
-the mnemonic phrase generated from the private key of the wallet and the only way to access the
-wallet.
+the mnemonic phrases generated from the private key of the Wallet and the only way to access the
+Wallet.
 
-:::info Hotspot App Users must migrate to the Helium Wallet app.
+:::info Hotspot App Users must migrate to the Helium Wallet App.
 
-Long term Helium Hotspot app users may have a 12-word seed phrase, these can be used in place of
-24-word seed phrases. All new Helium Wallets are generated from a 24-word seed phrase.
+Long term Helium Hotspot App users may have a 12-word seed phrase, which can be used in place of
+a 24-word seed phrase. All new Helium Wallets are generated from a 24-word seed phrase.
 
-The Helium Hotspot App is now no longer used for creating or managing wallets.
+The Helium Hotspot App is now no longer used for creating or managing Wallets.
 
-You can still see the previously created 12-word phrase in the Helium Hotspot app. Select > Settings
+You can still see the previously created 12-word phrase in the Helium Hotspot App. Select > Settings
 Icon > Reveal Words.
 
 The 12-word seed phrase can be imported in the [Helium Wallet App](/wallets/helium-wallet-app).
@@ -35,7 +35,7 @@ The 12-word seed phrase can be imported in the [Helium Wallet App](/wallets/heli
 :::warning Lose the seed phrase, lose it all.
 
 The seed phrase words can never be recovered if they are lost, and they are the sole key to
-accessing a wallet, the tokens and NFTs it contains, and all access to associated Hotspots and their
+accessing a Wallet, the tokens and NFTs it contains, and all access to associated Hotspots and their
 rewards.
 
 :::
@@ -44,12 +44,12 @@ Back up a seed phrase by writing down the words on paper with a pen and appropri
 
 No one can recover a lost, forgotten, or misplaced seed phrase.
 
-Existing Helium Wallet and Helium Hotspot app users can view the seed phrase for a wallet in the app
+Existing Helium Wallet and Helium Hotspot App users can view the seed phrase for a Wallet in the App
 settings menu under `Reveal Words`.
 
 :::caution Before Deleting Helium Wallet Apps
 
-Do not log out of a phone wallet or uninstall the Helium Wallet app without first writing down the
+Do not log out of a phone Wallet or uninstall the Helium Wallet App without first writing down the
 seed phrase.
 
 :::
@@ -73,10 +73,10 @@ into a website to fix a problem.
 :::note Remember these important things.
 
 1. Write down and keep seed phrases safe, do it now.
-2. Never give seed phrase words to anyone who can not be trusted with the HNT value and Hotspot
+2. Never give seed phrase words to anyone who cannot be trusted with the HNT value and Hotspot
    value.
-3. Do not enter seed phrase words in any app or website not on the list above.
-4. Do not enter seed phrase words in any maker app.
+3. Do not enter seed phrase words in any App or website not on the list above.
+4. Do not enter seed phrase words in any Maker App.
 5. Do not store images of your words on cloud-based doc/file stores.
 
 :::
@@ -85,6 +85,6 @@ into a website to fix a problem.
 
 ## Solana Seed Phrases
 
-Seed phrases generated to create wallets on the Helium blockchain can not be used on the Solana
-blockchain. To migrate a Helium Wallet to a Solana wallet you must export and import the private key
-from a Helium Wallet to a Solana wallet.
+Seed phrases generated to create Wallets on the Helium blockchain cannot be used on the Solana
+blockchain. To migrate a Helium Wallet to a Solana Wallet you must export and import the private key
+from a Helium Wallet to a Solana Wallet.
