--- a/docs/network-iot/frequency-plans/frequency-plans.mdx
+++ b/docs/network-iot/frequency-plans/frequency-plans.mdx
@@ -10,8 +10,8 @@ slug: /iot/frequency-plans
 
 # Frequencies on the Helium Network
 
-Helium's LoRaWAN Network is built upon 8-channel gateways. This page will help you confirm the
-appropriate frequencies for gateway configuration for each country.
+Helium's LoRaWAN Network is built upon 8-channel Gateways. This page will help you confirm the
+appropriate frequencies for Gateway configuration for each country.
 
 Feel free to use
 [our packet forwarder configuration examples](https://github.com/helium/sx1302_hal/tree/helium/hotspot/packet_forwarder)
@@ -19,7 +19,7 @@ here.
 
 :::warning
 
-LoRa gateways on the Helium Network must transmit on uplink frequencies. Some gateways limit their
+LoRa Gateways on the Helium Network must transmit on uplink frequencies. Some Gateways limit their
 transmit range to downlink frequencies and special configuration may be necessary.
 
 :::
