--- a/docs/network-iot/frequency-plans/region-plans.mdx
+++ b/docs/network-iot/frequency-plans/region-plans.mdx
@@ -10,27 +10,27 @@ slug: /iot/region-plans
 
 # Frequencies by Region on the Helium Network
 
-Helium's LoRaWAN Network is built upon 8-channel gateways. This page will help you confirm the
-appropriate frequencies for gateway configuration for each region.
+Helium's LoRaWAN Network is built upon 8-channel Gateways. This page will help you confirm the
+appropriate frequencies for Gateway configuration for each region.
 
 ## Frequency Plans by Country
 
-Where a frequency plan is "Unknown", it often means the local telecommnications or radio authority
+Where a frequency plan is "Unknown", it often means the local telecommunications or radio authority
 in that country has not yet created
 [Short Range Device (SRD)](https://en.wikipedia.org/wiki/Short-range_device) regulations for either
-the 800 Mhz or 900 Mhz spectrum bands. Helium gateways cannot be operated in countries without valid
+the 800 or 900 MHz spectrum bands. Helium Gateways cannot be operated in countries without valid
 SRD regulations. Contact the LoRa Alliance for further information -
 [LoRa Alliance](https://lora-alliance.org/contact/)
 
 Note - Helium does not support EU433 and has no plans to ever support EU433 given it is a legacy
-band. Countries with EU433 should consider regulations to support the 800 or 900 Mhz SRD bands.
+band. Countries with EU433 should consider regulations to support the 800 or 900 MHz SRD bands.
 
 #### A <a id="a"></a>
 
 | Country                 | Frequency Plan |
 | ----------------------- | -------------- |
 | Afghanistan             | Unknown        |
-| Aland Islands           | EU868          |
+| Åland Islands           | EU868          |
 | Albania                 | EU868          |
 | Algeria                 | AS923_3        |
 | American Samoa          | US915          |
@@ -64,7 +64,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Bermuda                         | US915          |
 | Bhutan                          | EU868          |
 | Bolivia                         | AS923_1        |
-| Bonaire Sint Eustatius and Saba | EU868          |
+| Bonaire, Sint Eustatius & Saba  | EU868          |
 | Bosnia and Herzegovina          | EU868          |
 | Botswana                        | EU868          |
 | Bouvet Island                   | EU868          |
@@ -90,7 +90,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Chile                    | AU915_SB1      |
 | China                    | CN470          |
 | Christmas Island         | AU915_SB2      |
-| Cocos [Keeling] Islands  | AU915_SB2      |
+| Cocos Keeling Islands    | AU915_SB2      |
 | Colombia                 | AU915_SB1      |
 | Comoros                  | EU868          |
 | Congo [DRC]              | Unknown        |
@@ -245,7 +245,7 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Montserrat       | AU915_SB1      |
 | Morocco          | EU433          |
 | Mozambique       | Unknown        |
-| Myanmar [Burma]  | AS923_1        |
+| Myanmar          | AS923_1        |
 
 #### N <a id="n"></a>
 
@@ -310,11 +310,11 @@ band. Countries with EU433 should consider regulations to support the 800 or 900
 | Country                                      | Frequency Plan |
 | -------------------------------------------- | -------------- |
 | Sahrawi Arab Democratic Republic             | Unknown        |
-| Saint Barthelemy                             | EU868          |
+| Saint Barthélemy                             | EU868          |
 | Saint Helena                                 | Unknown        |
 | Saint Kitts and Nevis                        | AU915_SB1      |
 | Saint Lucia                                  | AU915_SB1      |
-| Saint Martin                                 | EU868          |
+| Saint-Martin / Sint Maarten                  | EU868          |
 | Saint Pierre and Miquelon                    | EU868          |
 | Saint Vincent and the Grenadines             | AU915_SB1      |
 | Samoa                                        | EU868          |
