--- a/docs/archive/mine-hnt.mdx
+++ b/docs/archive/mine-hnt.mdx
@@ -1,7 +1,7 @@
 ---
 id: mine-hnt
-title: Mine HNT
-pagination_label: Mine HNT
+title: Mine IOT
+pagination_label: Mine IOT
 sidebar_label: Introduction
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
@@ -17,7 +17,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="headericon" src={useBaseUrl('img/mine-hnt/minehnticon.png')} />
         <div className="headertext">
           <h2 className="subtitle">
-            Helium Hotspots mine $HNT and are built by our growing ecosystem of approved
+            Helium Hotspots mine $IOT and are built by our growing ecosystem of approved
             manufacturers.
           </h2>
           <div>
