--- a/docs/helium-tokens/mine-iot.mdx
+++ b/docs/helium-tokens/mine-iot.mdx
@@ -1,11 +1,11 @@
 ---
-id: mine-hnt
+id: mine-iot
 title: Mine IOT
 pagination_label: Mine IOT
 sidebar_label: Introduction
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /mine-hnt
+slug: /mine-iot
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -67,26 +67,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
   <div class="row">
-    <div class="col col--6 borderTop">
-      <div>
-        <h3>Full Hotspots</h3>
-        <p style={{ marginBottom: 40 }}>
-          These Hotspots maintain a full copy of the HNT blockchain, Participate in Proof of
-          Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/hotspot-makers/iot/full-hotspots">can be found here</a>.
-        </p>
-      </div>
-    </div>
-    <div class="col col--6 borderTop">
-      <div>
-        <h3>Light Hotspots</h3>
-        <p style={{ marginBottom: 40 }}>
-          These Hotspots participate in Proof of Coverage rewards, and get rewarded for forwarding
-          Data Packets. Details{' '}
-          <a href="https://docs.helium.com/hotspot-makers/iot/light-hotspots">can be found here</a>.
-        </p>
-      </div>
-    </div>
     <div class="col col--6 borderTop">
       <div>
         <h3>Data Only Hotspots</h3>
