--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -27,8 +27,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
           </p>
         </div>
         <div class="col col--6">
-          <a className="quicklink quicklinkorange" href="/mine-hnt">
-            Learn about Mining HNT{' '}
+          <a className="quicklink quicklinkorange" href="/mine-iot">
+            Learn about Mining IOT{' '}
             <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
           </a>
           <a className="quicklink quicklinkgreen" href="/use-the-network">
@@ -100,17 +100,17 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
     <div class="col col--6 blockblue" style={{ marginBottom: 100 }}>
       <img className="homeicon" src={useBaseUrl('img/home/mineicon.png')} />
-      <h3>Mine $HNT</h3>
+      <h3>Mine $IOT</h3>
       <p className="podtext">
         Hotspots create The People’s Network, a long-range wireless coverage for very low power and
-        inexpensive IoT devices and are rewarded $HNT for doing so.
+        inexpensive IoT devices and are rewarded $IOT for doing so.
       </p>
-      <a href="/mine-hnt">
+      <a href="/mine-iot">
         Learn More{' '}
         <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrowblue.svg')} />
       </a>
       <h5>Quick Links</h5>
-      <a className="block" href="/mine-hnt">
+      <a className="block" href="/mine-iot">
         <img className="docicon" src={useBaseUrl('img/icons/dociconblue.svg')} /> What is a Helium
         Miner?
       </a>
