--- a/docs/use-the-network/devices/ready-to-use/dragino/lds02.mdx
+++ b/docs/use-the-network/devices/ready-to-use/dragino/lds02.mdx
@@ -92,7 +92,11 @@ manufacture of this device, Dragino, is using their own encoding scheme to defin
 which piece of data. Below is a table taken from the manual showing the size and location of each
 piece of data.
 
-<img src={useBaseUrl('img/use-the-network/devices/ready-to-use/dragino/lds02-byte-packing.png')} />
+<img
+  src={useBaseUrl(
+    'img/use-the-network/devices/ready-to-use/dragino/dragino-lds02-byte-packing.png',
+  )}
+/>
 
 If you would like to decode the device payload to view it in Console or send to your own
 application, this section will show you how. We'll be using a Console Function Decoder to unpack the
