--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
@@ -7,7 +7,7 @@ description:
   A rapid solution for embedded ML combining vision, audio and connectivity - Detect Gestures,
   Identify Objects, See Things. The Vision shield features a 324x324 pixels camera module containing
   an Ultra Low Power Image Sensor designed for Always-on vision devices and applications.
-image: /static/img/use-the-network/devices/development/arduino/camera_shield1.jpg
+image: https://docs.helium.com/img/link-image.png
 slug: /use-the-network/devices/development/arduino/lora-vision-shield
 ---
 
