--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-mini.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5-mini.mdx
@@ -9,7 +9,7 @@ description:
   full GPIOs of Wio-E5 STM32WLE5JC. It has rich interfaces including UART, ADC, SPI, IIC,etc.
   Supporting LoRaWAN protocol and global frequency, Wio-E5 mini is able to achieve a transmission
   range of up to 10 km in open area and ultra-low power consumption.
-image: img/use-the-network/devices/development/seeed-studio/loramodule-e5-mini.jpg
+image: https://docs.helium.com/img/link-image.png
 slug: /use-the-network/devices/development/seeed-studio/loramodule-e5-mini
 ---
 
