--- a/docs/network-iot/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/network-iot/coverage-mapping/adeunis-mapper.mdx
@@ -29,8 +29,8 @@ automatically in the ON or OFF state. The device can be used while charging. Any
 
 <img src={useBaseUrl('img/use-the-network/coverage-mapping/adeunis-mapper-adeunis-charging.png')} />
 
-If the battery is empty, it will be necessary to recharge the device for 6 hours in order for it to
-be fully charged.
+If the battery completely is empty, it will be necessary to recharge the device for 6 hours in order
+for it to be fully charged.
 
 ### Operating Procedure
 
