--- a/docs/network-iot/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/network-iot/coverage-mapping/adeunis-mapper.mdx
@@ -29,7 +29,7 @@ automatically in the ON or OFF state. The device can be used while charging. Any
 
 <img src={useBaseUrl('img/use-the-network/coverage-mapping/adeunis-mapper-adeunis-charging.png')} />
 
-If the battery completely is empty, it will be necessary to recharge the device for 6 hours in order
+If the battery is completely empty, it will be necessary to recharge the device for 6 hours in order
 for it to be fully charged.
 
 ### Operating Procedure
