--- a/docs/helium-tokens/mine-iot.mdx
+++ b/docs/helium-tokens/mine-iot.mdx
@@ -45,7 +45,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     <div class="col col--6">
       <p>
         Want to help build the largest IoT network in the world? Want to provide coverage to IoT
-        devices and earn HNT while you do?
+        devices and earn IOT while you do?
       </p>
       <p style={{ marginBottom: 40 }}>
         Check out some of these quick links for help getting started or join us in the
