--- a/docs/helium-tokens/mine-iot.mdx
+++ b/docs/helium-tokens/mine-iot.mdx
@@ -1,11 +1,11 @@
 ---
-id: mine-hnt
-title: Mine HNT
-pagination_label: Mine HNT
+id: mine-iot
+title: Mine IOT
+pagination_label: Mine IOT
 sidebar_label: Introduction
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /mine-hnt
+slug: /mine-iot
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -17,7 +17,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <img className="headericon" src={useBaseUrl('img/mine-hnt/minehnticon.png')} />
         <div className="headertext">
           <h2 className="subtitle">
-            Helium Hotspots mine $HNT and are built by our growing ecosystem of approved
+            Helium Hotspots mine $IOT and are built by our growing ecosystem of approved
             manufacturers.
           </h2>
           <div>
@@ -45,7 +45,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     <div class="col col--6">
       <p>
         Want to help build the largest IoT network in the world? Want to provide coverage to IoT
-        devices and earn HNT while you do?
+        devices and earn IOT while you do?
       </p>
       <p style={{ marginBottom: 40 }}>
         Check out some of these quick links for help getting started or join us in the
@@ -67,26 +67,6 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
     </div>
   </div>
   <div class="row">
-    <div class="col col--6 borderTop">
-      <div>
-        <h3>Full Hotspots</h3>
-        <p style={{ marginBottom: 40 }}>
-          These Hotspots maintain a full copy of the HNT blockchain, Participate in Proof of
-          Coverage rewards, and get rewarded for forwarding Data Packets. Details{' '}
-          <a href="https://docs.helium.com/hotspot-makers/iot/full-hotspots">can be found here</a>.
-        </p>
-      </div>
-    </div>
-    <div class="col col--6 borderTop">
-      <div>
-        <h3>Light Hotspots</h3>
-        <p style={{ marginBottom: 40 }}>
-          These Hotspots participate in Proof of Coverage rewards, and get rewarded for forwarding
-          Data Packets. Details{' '}
-          <a href="https://docs.helium.com/hotspot-makers/iot/light-hotspots">can be found here</a>.
-        </p>
-      </div>
-    </div>
     <div class="col col--6 borderTop">
       <div>
         <h3>Data Only Hotspots</h3>
