use style classes
closes #1339

--- a/docs/faq/edit-a-hip.mdx
+++ b/docs/faq/edit-a-hip.mdx
@@ -31,7 +31,7 @@ This page will walk users through the process of:
 ### Markdown Formatting
 
 All HIPs in the Helium GitHub repository are written in Markdown an easy-to-read, easy-to-write
-syntax for formatting plain text. Read more about basic writing and formatting syntax
+syntax for formatting rich text. Read more about basic writing and formatting syntax
 [here.](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
 
 Do not let knowledge of Markdown stop you from writing a proposal. Get words on a page, and the
@@ -51,7 +51,8 @@ repository maintainers and other community members will help!
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/fork-step-0.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -63,7 +64,8 @@ bottom left-hand corner.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/fork-step-1.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
   <figcaption>
     A copy of the Helium HIP repository will be made in the user's GitHub account and should open
@@ -76,7 +78,7 @@ bottom left-hand corner.
 ## Edit an Existing HIP
 
 All HIPs in the Helium GitHub repository are written in Markdown an easy-to-read, easy-to-write
-syntax for formatting plain text. Read more about basic writing and formatting syntax
+syntax for formatting rich text. Read more about basic writing and formatting syntax
 [here.](https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax)
 
 **Step 1.** Begin inside the forked copy at `https://github.com/<githubUsername>/HIP`
@@ -84,7 +86,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-0.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
   <figcaption>Your username will be visible here.</figcaption>
 </figure>
@@ -96,7 +99,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-1.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
   <figcaption>Click on the HIP to edit.</figcaption>
 </figure>
@@ -108,7 +112,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-2.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -119,7 +124,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-3.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -130,7 +136,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-4.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -142,7 +149,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-5.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -153,7 +161,8 @@ syntax for formatting plain text. Read more about basic writing and formatting s
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-6.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -165,7 +174,8 @@ tab.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/edit-step-7.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -182,7 +192,8 @@ button to start a Pull Request
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/pull-request-step-0.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
   <figcaption>
     The number may be more than 1, depending on how many edits ahead the forked repository is from
@@ -198,7 +209,8 @@ being proposed.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/pull-request-step-1.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -210,7 +222,8 @@ were made.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/pull-request-step-2.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
   <figcaption>Good pull requests are detailed in their explanation of changes.</figcaption>
 </figure>
@@ -222,7 +235,8 @@ were made.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/pull-request-step-3.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
@@ -233,7 +247,8 @@ were made.
 <figure className="screensnippet-wrapper">
   <img
     src={useBaseUrl('/img/hip/pull-request-step-4.png')}
-    style={{ maxHeight: 800, borderRadius: '40px', padding: '14px 16px 20px' }}
+    style={{ maxHeight: 800 }}
+    className="add-shadow-margin"
   />
 </figure>
 
